--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,12 @@ body {
 .masonry-column > div {
   margin-bottom: 24px; /* matches gap-6 */
 }
+
+/* .hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+} */
